implementação de cabeçalho e rodapé com Tailwind CSS e SCSS

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,11 +1,13 @@
-<header>
+<header class="bg-blue-500 text-white p-4 shadow-md">
   <app-navbar></app-navbar>
 </header>
 
-<main>
+<main class="flex-grow p-6 bg-light-gray">
   <router-outlet></router-outlet>
 </main>
 
-<footer>
-
+<footer class="bg-sand text-chalk py-4 mt-8">
+  <div class="text-center">
+    <p>&copy; 2024 Minha Aplicação. Todos os direitos reservados.</p>
+  </div>
 </footer>
