--- a/src/app/view/navbar/navbar.component.html
+++ b/src/app/view/navbar/navbar.component.html
@@ -1,17 +1,28 @@
-<nav class="absolute top-0 left-0 w-full bg-transparent py-4 z-10">
+<nav [class.bg-gray-800]="isDarkMode" [class.bg-transparent]="!isDarkMode" class="absolute top-0 left-0 w-full py-4 z-10 transition-colors duration-300">
   <div class="container mx-auto flex justify-between items-center px-28">
     <ul class="flex space-x-20 list-none text-2xl">
       <li><a href="#" class="text-light-gray font-akatab hover:text-orange">Home</a></li>
       <li><a href="#como-funciona" class="text-light-gray font-akatab hover:text-orange">Como Funciona</a></li>
     </ul>
-    
+
     <div class="text-light-gray text-2xl font-akatab mx-auto">
       <span>Logo</span>
     </div>
-    
+
     <ul class="flex space-x-20 list-none text-2xl">
       <li><a href="#contato" class="text-light-gray font-akatab hover:text-orange">Contato</a></li>
       <li><a href="#sobre" class="text-light-gray font-akatab hover:text-orange">Sobre</a></li>
     </ul>
+
+    <div>
+      <button 
+        (click)="toggleDarkMode()" 
+        class="px-4 py-2 rounded text-white transition-colors duration-300"
+        [class.bg-blue-500]="!isDarkMode"
+        [class.bg-yellow-500]="isDarkMode"
+      >
+        {{ isDarkMode ? 'Desativar Modo Escuro' : 'Ativar Modo Escuro' }}
+      </button>
+    </div>
   </div>
 </nav>
