--- a/src/app/view/home/home.component.html
+++ b/src/app/view/home/home.component.html
@@ -1,7 +1,10 @@
-<div class="home-container">
-    <div class="home-content">
-      <!-- Seu conteúdo aqui -->
-      <h1 class="text-white text-center text-4xl font-italiana">Bem-vindo à Home</h1>
-    </div>
+<div class="flex items-center justify-center min-h-screen border-[10px] border-[#AFAB9A] bg-cover bg-center" style="background-image: url('/assets/images/home.png');">
+  <div class="text-center max-w-3xl">
+    <h1 class="text-white text-2xl font-italiana mb-12">
+      Descomplique o planejamento da sua viagem! Com nosso app, você só precisa informar alguns detalhes, e a IA cria um roteiro personalizado, sob medida para suas preferências e necessidades.
+    </h1>
+    <button routerLink= "signin" class="bg-blue text-white px-6 py-3 text-lg rounded-lg hover:bg-opacity-80 transition">
+      Criar meu roteiro
+    </button>
   </div>
-  
+</div>
