--- a/src/app/view/navbar/navbar.component.html
+++ b/src/app/view/navbar/navbar.component.html
@@ -13,9 +13,10 @@
       <li><a routerLink="/como-funciona" class="text-light-gray font-akatab hover:text-orange">Como Funciona</a></li>
     </ul>
 
-    <div class="text-light-gray text-2xl font-akatab mx-auto">
-      <span>Logo</span>
+    <div class="mx-auto">
+      <img src="assets/images/roteirize_logo.png" alt="Logo" class="text-light-gray text-2xl font-akatab">
     </div>
+    
 
     <ul class="hidden md:flex space-x-20 list-none text-2xl">
       <li><a routerLink="/login" class="text-light-gray font-akatab hover:text-orange">Login</a></li>
