--- a/src/app/view/login/login.component.html
+++ b/src/app/view/login/login.component.html
@@ -11,7 +11,19 @@
 
     <div class="w-1/2 p-8 flex flex-col justify-center">
       <h2 class="text-2xl font-italiana mb-6 text-orange">Faça o Login</h2>
-      <app-login-form></app-login-form> 
+      <form (ngSubmit)="onLogin()">
+        <div class="mb-4">
+          <label for="email" class="block text-sm font-medium text-gray-700">E-mail</label>
+          <input type="email" id="email" [(ngModel)]="email" name="email" class="input-field w-full p-2 border-2 border-gray-300 rounded-md focus:outline-none focus:ring-2 focus:ring-blue-500" required />
+        </div>
+        <div class="mb-4">
+          <label for="password" class="block text-sm font-medium text-gray-700">Senha</label>
+          <input type="password" id="password" [(ngModel)]="password" name="password" class="input-field w-full p-2 border-2 border-gray-300 rounded-md focus:outline-none focus:ring-2 focus:ring-blue-500" required />
+        </div>
+        <div *ngIf="errorMessage" class="text-red-500 mb-4">{{ errorMessage }}</div>
+        <div *ngIf="successMessage" class="text-green-500 mb-4">{{ successMessage }}</div>
+        <button type="submit" class="w-full bg-sand text-white p-2 rounded-md hover:bg-orange transition-colors">Entrar</button>
+      </form>
     </div>
 
   </div>
