--- a/src/app/view/home/home.component.html
+++ b/src/app/view/home/home.component.html
@@ -1,4 +1,4 @@
-<div class="flex items-center justify-center min-h-screen border-[10px] border-[#AFAB9A] bg-cover bg-center" style="background-image: url('/assets/images/home.png');">
+<div class="flex items-center justify-center min-h-screen border-[10px] border-[#AFAB9A] bg-cover bg-center" style="background-image: url('./assets/images/home.png');">
   <div class="text-center max-w-3xl">
     <h1 class="text-white text-2xl font-italiana mb-12">
       Descomplique o planejamento da sua viagem! Com nosso app, você só precisa informar alguns detalhes, e a IA cria um roteiro personalizado, sob medida para suas preferências e necessidades.
